# equinor-trading-data-processing-pipeline-template

./: .amlignore  .gitignore  Dockerfile  README.md  config.json  pipeline.py  pyproject.toml
docs/source/: conf.py
src/: aml_wrapper.py  hello_world.py  price_pipeline.py  price_test.py  process.py  run_local.py  stop_schedule.py
src/models/: Config.py
test/: test_hello_world.py  test_process.py  upload_test_file.py
