[tool.poetry]
name = "equinor-trading-repo-template"
version = "0.1.0"
description = "Standard template containing the essentials for a new repo"
authors = ["Equinor"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
pandas = "^1.3.4"
yfinance = "^0.1.67"
azureml-core = "^1.37.0"
pydantic = "^1.9.0"
azureml-dataset-runtime = "^1.37.0"
azureml-pipeline = "^1.37.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
mypy = "^0.910"
isort = "^5.10.1"
flake8 = "^4.0.1"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
